@@ -21,6 +21,6 @@
 {% block content-related %}
   <div class="box">
     <h3>{% trans "E-mail validation process" %}</h3>
-    <p>{% trans "You can manage the e-mail validation process from the" %} <a href="/accounts/profile/">{% trans "overview page" %}.</p>
+    <p>{% trans "You can manage the e-mail validation process from the" %} <a href="{% url profile_overview %}">{% trans "overview page" %}.</p>
   </div>
 {% endblock %}
