@@ -6,7 +6,7 @@
 
 {% block content %}
 	<div class="success">
-		<p>{% blocktrans %}You have successfully registered a new account. Go to the <a href="/accounts/profile/">login page</a> to authenticate and start using this site{% endblocktrans %}.</p>
+		<p>{% blocktrans %}You have successfully registered a new account. Go to the <a href="{% url profile_overview %}">login page</a> to authenticate and start using this site{% endblocktrans %}.</p>
 	</div>
 {% endblock %}
 {% block content-related %}
