@@ -4,7 +4,7 @@
 
 {% trans "Feel free to change this password going to this page:" %}
 
-http://{{ domain }}/accounts/password/change/{{ key }}/
+http://{{ domain }}{% url password_change_with_key key %}
 
 {% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
