@@ -5,6 +5,8 @@ django-profile Changelog
 Development version
 -------------------
 
+* Templates modified to do reverse URL.
+* Added internacionalization of the urls. Credits to Alvaro Stevens.
 * Changed the model of userprofile to solve the problem shown on this ticket:
 	http://code.google.com/p/django-profile/issues/detail?id=25&can=1
 * Django newforms-admin has been merged into trunk on revision [7967]. Newforms is now the official form management library, so this version of django-profile has been adapted to make it compatible with the new changes.
